--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.uni.gdp.quiz_gdp">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -25,8 +27,10 @@
         <activity
             android:name=".ResultActivity"
             android:label="Ergebnis" />
-        <activity android:name=".LeaderboardActivity"
-            android:label="Leaderboard"/>
+        <activity
+            android:name=".LeaderboardActivity"
+            android:label="Leaderboard" />
+        <activity android:name=".SelectquizActivity"></activity>
     </application>
 
 </manifest>
